--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,4 +36,4 @@ jobs:
         run: npm install --global surge
 
       - name: Deploy to Surge
-        run: surge ./build complex-newsletter-signup-form-using-formik.sh --token ${{ secrets.YOUR_SECRET_NAME_00 }}
+        run: surge ./build complex-newsletter-signup-form-using-formik.surge.sh --token ${{ secrets.YOUR_SECRET_NAME_00 }}
